SERVER-22698 fix duplicate error codes caused by broken errorcodes.py