src/mongo/s/strategy.cpp
@@ -330,7 +330,7 @@ void Strategy::commandOp(OperationContext* txn,
         result.shardTargetId = shardId;
 
         result.target = fassertStatusOK(
-            28739, ConnectionString::parse(cursor.getShardCursor(shardId)->originalHost()));
+            34417, ConnectionString::parse(cursor.getShardCursor(shardId)->originalHost()));
         result.result = cursor.getShardCursor(shardId)->peekFirst().getOwned();
         results->push_back(result);
     }
@@ -340,7 +340,7 @@ void Strategy::getMore(OperationContext* txn, Request& request) {
     const char* ns = request.getns();
     const int ntoreturn = request.d().pullInt();
     uassert(
-        34369, str::stream() << "Invalid ntoreturn for OP_GET_MORE: " << ntoreturn, ntoreturn >= 0);
+        34424, str::stream() << "Invalid ntoreturn for OP_GET_MORE: " << ntoreturn, ntoreturn >= 0);
     const long long id = request.d().pullInt64();
 
     // TODO: Handle stale config exceptions here from coll being dropped or sharded during op for
@@ -390,7 +390,7 @@ void Strategy::getMore(OperationContext* txn, Request& request) {
 void Strategy::killCursors(OperationContext* txn, Request& request) {
     DbMessage& dbMessage = request.d();
     const int numCursors = dbMessage.pullInt();
-    massert(28793,
+    massert(34425,
             str::stream() << "Invalid killCursors message. numCursors: " << numCursors
                           << ", message size: " << dbMessage.msg().dataSize() << ".",
             dbMessage.msg().dataSize() == 8 + (8 * numCursors));
